tests/fail/elaboration/unification/mismatch/fun-type-input-type.snap
stdout = ''
stderr = '''
error: type mismatch
  ┌─ tests/fail/elaboration/unification/mismatch/fun-type-input-type.fathom:3:43
  │
3 │ fun (A : Type) -> fun (a : A) -> fun (b : a) -> A
  │                                           ^

'''
